--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,71 +1,9 @@
 {
-    "files.associations": {
-        "string": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "chrono": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "complex": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "mutex": "cpp",
-        "new": "cpp",
-        "numbers": "cpp",
-        "ostream": "cpp",
-        "semaphore": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "stop_token": "cpp",
-        "streambuf": "cpp",
-        "thread": "cpp",
-        "typeinfo": "cpp",
-        "list": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "fstream": "cpp",
-        "iomanip": "cpp",
-        "cinttypes": "cpp",
-        "forward_list": "cpp",
-        "valarray": "cpp"
-    }
-//     ,
-//     "code-runner.executorMap": {
-//     "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt -I '头文件路径' && $dir$fileNameWithoutExt",
-//   }
+    "cmake.configureSettings": {
+        "OpenCV_DIR": "D:/Work/project/opencv-4.10.0/win_build",
+        "CMAKE_EXPORT_COMPILE_COMMANDS": true
+    },
+    "cmake.generator": "MinGW Makefiles",
+    "cmake.buildDirectory": "${workspaceFolder}/C++/build",
+    "cmake.sourceDirectory": "D:/Work/project/opencv_project/red_detect"
 }
